<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/grp1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_item_sign_in"
            android:checked="true"
            android:icon="@drawable/ic_perm_identity_grey600_24dp"
            android:title="@string/nav_item_attachment" />
        <item
            android:id="@+id/navigation_item_profile"
            android:icon="@drawable/ic_account_box_grey600_24dp"
            android:title="@string/nav_item_images" />
        <item
            android:id="@+id/navigation_item_add_new_location"
            android:icon="@drawable/ic_add_box_grey600_24dp"
            android:title="@string/nav_item_location" />

    </group>

    <group
        android:id="@+id/grp2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_item_help"
            android:icon="@drawable/ic_help_grey600_24dp"
            android:title="@string/nav_sub_menu_item01" />
        <item
            android:id="@+id/navigation_item_about"
            android:icon="@drawable/ic_mood_grey600_24dp"
            android:title="@string/nav_sub_menu_item02" />
    </group>

</menu>