<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/coordinatorLayout"
    android:padding="10dp"
    android:background="@color/login_primary" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_gravity="center"
        android:id="@+id/linFullLogin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_login_with"
            android:id="@+id/txtLoginwith"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/login_accent"
            android:visibility="gone" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/btn_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:visibility="gone" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rel1"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_marginBottom="10dp"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_or"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/login_accent"
                android:id="@+id/txtOr"
                android:layout_centerInParent="true"/>

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:background="@color/login_accent"
                android:layout_toRightOf="@+id/txtOr"
                android:layout_toEndOf="@+id/txtOr"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_centerInParent="true"/>

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:background="@color/login_accent"
                android:layout_toLeftOf="@+id/txtOr"
                android:layout_toStartOf="@+id/txtOr"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:layout_centerInParent="true"/>

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/linLogin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/login"
                android:textColor="@color/login_accent"
                android:layout_marginBottom="10dp"
                android:id="@+id/textView" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <EditText
                android:id="@+id/email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:singleLine="true"
                android:textColorHint="@color/login_secondary_text" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <EditText
                android:id="@+id/password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:singleLine="true"
                android:textColorHint="@color/login_secondary_text" />

            </android.support.design.widget.TextInputLayout>

            <!-- Login Button -->
            <Button
                android:id="@+id/btnLogin"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/login_accent"
                android:text="@string/btn_login"
                android:textColor="@color/white" />

            <!-- Link to Login Screen -->
            <Button
                android:id="@+id/btnLinkToRegisterScreen"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@null"
                android:text="@string/btn_link_to_register"
                android:textAllCaps="false"
                android:textSize="15sp"
                android:textColor="@color/login_accent"/>

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relProfile"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        android:visibility="gone"
        android:layout_centerInParent="true"
        android:padding="@dimen/activity_horizontal_margin">

        <LinearLayout
            android:id="@+id/linProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerHorizontal="true">

            <ImageView
                android:id="@+id/imgProfilePic"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/cd"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_vertical">

                <TextView
                    android:id="@+id/txtName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:textSize="20sp"
                    android:textColor="@color/login_accent"/>

                <TextView
                    android:id="@+id/txtEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:textSize="18sp"
                    android:textColor="@color/login_accent"/>

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btn_sign_out"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_logout_from_google"
            android:visibility="gone"
            android:layout_below="@+id/linProfile"/>

        <Button
            android:id="@+id/btn_revoke_access"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_revoke_access"
            android:visibility="visible"
            android:layout_below="@+id/btn_sign_out"/>

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>